// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Component: RadioButton -> should render checked 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
}

.c0:disabled {
  opacity: 0.5;
}

.c1 {
  font-size: var(--etna-font-size,14px);
  line-height: var(--etna-line-height,18px);
  -webkit-letter-spacing: 0.02em;
  -moz-letter-spacing: 0.02em;
  -ms-letter-spacing: 0.02em;
  letter-spacing: 0.02em;
  font-weight: 400;
  display: block;
  color: #646464;
}

.c8 {
  margin: 0;
  padding: 0;
  border: 0;
  color: inherit;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  width: 100%;
  border-style: solid;
  border-width: 1px;
  border-radius: 2px;
  background-color: #ffffff;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.5rem;
  height: 1.5rem;
  border-color: #949494;
  border-radius: 50%;
  cursor: pointer;
}

.c8:disabled {
  border-color: #bfbfbf;
  color: #949494;
  background-color: #ebebeb;
}

.c8:focus,
.c8:focus-visible {
  outline-width: 2px;
  outline-style: solid;
  outline-color: #024ddf;
  outline-offset: 2px;
  outline-offset: -2px;
}

.c8::-webkit-input-placeholder {
  color: #646464;
}

.c8::-moz-placeholder {
  color: #646464;
}

.c8:-ms-input-placeholder {
  color: #646464;
}

.c8::placeholder {
  color: #646464;
}

.c5 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c5:disabled ~ .c7 {
  border-color: #bfbfbf;
  color: #949494;
  background-color: #ebebeb;
  cursor: not-allowed;
}

.c5:focus-visible ~ .c7 {
  outline-width: 2px;
  outline-style: solid;
  outline-color: #024ddf;
  outline-offset: 2px;
}

.c5:checked ~ .c7 {
  border-color: #121212;
  border-width: 6px;
  -webkit-transition: border-width 0.15s;
  transition: border-width 0.15s;
}

.c5:hover:not(:checked):not(:disabled) ~ .c7 {
  border-color: #024ddf;
  border-width: 2px;
}

.c5:hover:not(:disabled) ~ .c7 {
  border-color: #0139a7;
}

.c5:disabled:checked ~ .c7 {
  border-color: #bfbfbf;
  border-width: 1px;
  background-color: #bfbfbf;
  box-shadow: inset 0 0 0 5px #ebebeb;
}

.c9 {
  font-size: var(--etna-font-size,14px);
  line-height: var(--etna-line-height,18px);
  -webkit-letter-spacing: 0.02em;
  -moz-letter-spacing: 0.02em;
  -ms-letter-spacing: 0.02em;
  letter-spacing: 0.02em;
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #121212;
}

.c2 {
  font-size: var(--rainier-font-size,16px);
  line-height: var(--rainier-line-height,22px);
  -webkit-letter-spacing: 0.02em;
  -moz-letter-spacing: 0.02em;
  -ms-letter-spacing: 0.02em;
  letter-spacing: 0.02em;
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  margin: -8px;
  color: #121212;
}

.c2 > * {
  padding: 8px;
}

.c3 {
  display: block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-top: auto;
  margin-bottom: auto;
}

.c4 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c6:disabled ~ {
  cursor: not-allowed;
}

@supports not selector(:focus-visible) {
  .c5:focus ~ .c7 {
    outline-width: 2px;
    outline-style: solid;
    outline-color: #024ddf;
    outline-offset: 2px;
  }
}

<div>
  <div
    class="c0"
    id="test-radio"
  >
    <label
      class="c1 c2"
      for="test-radio-input"
    >
      <span
        class="c3"
      >
        Label
      </span>
      <div
        class="c4"
      >
        <input
          aria-describedby="test-radio-error"
          checked=""
          class="c5 c6"
          id="test-radio-input"
          type="radio"
        />
        <span
          class="c7 c8"
        />
      </div>
    </label>
    <div
      class="c9"
      id="test-radio-error"
    />
  </div>
</div>
`;

exports[`Component: RadioButton -> should render correctly with label 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
}

.c0:disabled {
  opacity: 0.5;
}

.c1 {
  font-size: var(--etna-font-size,14px);
  line-height: var(--etna-line-height,18px);
  -webkit-letter-spacing: 0.02em;
  -moz-letter-spacing: 0.02em;
  -ms-letter-spacing: 0.02em;
  letter-spacing: 0.02em;
  font-weight: 400;
  display: block;
  color: #646464;
}

.c8 {
  margin: 0;
  padding: 0;
  border: 0;
  color: inherit;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  width: 100%;
  border-style: solid;
  border-width: 1px;
  border-radius: 2px;
  background-color: #ffffff;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.5rem;
  height: 1.5rem;
  border-color: #949494;
  border-radius: 50%;
  cursor: pointer;
}

.c8:disabled {
  border-color: #bfbfbf;
  color: #949494;
  background-color: #ebebeb;
}

.c8:focus,
.c8:focus-visible {
  outline-width: 2px;
  outline-style: solid;
  outline-color: #024ddf;
  outline-offset: 2px;
  outline-offset: -2px;
}

.c8::-webkit-input-placeholder {
  color: #646464;
}

.c8::-moz-placeholder {
  color: #646464;
}

.c8:-ms-input-placeholder {
  color: #646464;
}

.c8::placeholder {
  color: #646464;
}

.c5 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c5:disabled ~ .c7 {
  border-color: #bfbfbf;
  color: #949494;
  background-color: #ebebeb;
  cursor: not-allowed;
}

.c5:focus-visible ~ .c7 {
  outline-width: 2px;
  outline-style: solid;
  outline-color: #024ddf;
  outline-offset: 2px;
}

.c5:checked ~ .c7 {
  border-color: #121212;
  border-width: 6px;
  -webkit-transition: border-width 0.15s;
  transition: border-width 0.15s;
}

.c5:hover:not(:checked):not(:disabled) ~ .c7 {
  border-color: #024ddf;
  border-width: 2px;
}

.c5:hover:not(:disabled) ~ .c7 {
  border-color: #0139a7;
}

.c5:disabled:checked ~ .c7 {
  border-color: #bfbfbf;
  border-width: 1px;
  background-color: #bfbfbf;
  box-shadow: inset 0 0 0 5px #ebebeb;
}

.c9 {
  font-size: var(--etna-font-size,14px);
  line-height: var(--etna-line-height,18px);
  -webkit-letter-spacing: 0.02em;
  -moz-letter-spacing: 0.02em;
  -ms-letter-spacing: 0.02em;
  letter-spacing: 0.02em;
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #121212;
}

.c2 {
  font-size: var(--rainier-font-size,16px);
  line-height: var(--rainier-line-height,22px);
  -webkit-letter-spacing: 0.02em;
  -moz-letter-spacing: 0.02em;
  -ms-letter-spacing: 0.02em;
  letter-spacing: 0.02em;
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  margin: -8px;
  color: #121212;
}

.c2 > * {
  padding: 8px;
}

.c3 {
  display: block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-top: auto;
  margin-bottom: auto;
}

.c4 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c6:disabled ~ {
  cursor: not-allowed;
}

@supports not selector(:focus-visible) {
  .c5:focus ~ .c7 {
    outline-width: 2px;
    outline-style: solid;
    outline-color: #024ddf;
    outline-offset: 2px;
  }
}

<div>
  <div
    class="c0"
    id="test-radio"
  >
    <label
      class="c1 c2"
      for="test-radio-input"
    >
      <span
        class="c3"
      >
        Label
      </span>
      <div
        class="c4"
      >
        <input
          aria-describedby="test-radio-error"
          class="c5 c6"
          id="test-radio-input"
          type="radio"
        />
        <span
          class="c7 c8"
        />
      </div>
    </label>
    <div
      class="c9"
      id="test-radio-error"
    />
  </div>
</div>
`;

exports[`Component: RadioButton -> should render disabled 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
}

.c0:disabled {
  opacity: 0.5;
}

.c1 {
  font-size: var(--etna-font-size,14px);
  line-height: var(--etna-line-height,18px);
  -webkit-letter-spacing: 0.02em;
  -moz-letter-spacing: 0.02em;
  -ms-letter-spacing: 0.02em;
  letter-spacing: 0.02em;
  font-weight: 400;
  display: block;
  color: #646464;
  color: #949494;
  cursor: not-allowed;
}

.c8 {
  margin: 0;
  padding: 0;
  border: 0;
  color: inherit;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  width: 100%;
  border-style: solid;
  border-width: 1px;
  border-radius: 2px;
  background-color: #ffffff;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.5rem;
  height: 1.5rem;
  border-color: #949494;
  border-radius: 50%;
  cursor: pointer;
}

.c8:disabled {
  border-color: #bfbfbf;
  color: #949494;
  background-color: #ebebeb;
}

.c8:focus,
.c8:focus-visible {
  outline-width: 2px;
  outline-style: solid;
  outline-color: #024ddf;
  outline-offset: 2px;
  outline-offset: -2px;
}

.c8::-webkit-input-placeholder {
  color: #646464;
}

.c8::-moz-placeholder {
  color: #646464;
}

.c8:-ms-input-placeholder {
  color: #646464;
}

.c8::placeholder {
  color: #646464;
}

.c5 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c5:disabled ~ .c7 {
  border-color: #bfbfbf;
  color: #949494;
  background-color: #ebebeb;
  cursor: not-allowed;
}

.c5:focus-visible ~ .c7 {
  outline-width: 2px;
  outline-style: solid;
  outline-color: #024ddf;
  outline-offset: 2px;
}

.c5:checked ~ .c7 {
  border-color: #121212;
  border-width: 6px;
  -webkit-transition: border-width 0.15s;
  transition: border-width 0.15s;
}

.c5:hover:not(:checked):not(:disabled) ~ .c7 {
  border-color: #024ddf;
  border-width: 2px;
}

.c5:hover:not(:disabled) ~ .c7 {
  border-color: #0139a7;
}

.c5:disabled:checked ~ .c7 {
  border-color: #bfbfbf;
  border-width: 1px;
  background-color: #bfbfbf;
  box-shadow: inset 0 0 0 5px #ebebeb;
}

.c9 {
  font-size: var(--etna-font-size,14px);
  line-height: var(--etna-line-height,18px);
  -webkit-letter-spacing: 0.02em;
  -moz-letter-spacing: 0.02em;
  -ms-letter-spacing: 0.02em;
  letter-spacing: 0.02em;
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #121212;
}

.c2 {
  font-size: var(--rainier-font-size,16px);
  line-height: var(--rainier-line-height,22px);
  -webkit-letter-spacing: 0.02em;
  -moz-letter-spacing: 0.02em;
  -ms-letter-spacing: 0.02em;
  letter-spacing: 0.02em;
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  margin: -8px;
  color: #646464;
}

.c2 > * {
  padding: 8px;
}

.c3 {
  display: block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-top: auto;
  margin-bottom: auto;
}

.c4 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c6:disabled ~ {
  cursor: not-allowed;
}

@supports not selector(:focus-visible) {
  .c5:focus ~ .c7 {
    outline-width: 2px;
    outline-style: solid;
    outline-color: #024ddf;
    outline-offset: 2px;
  }
}

<div>
  <div
    class="c0"
    id="test-radio"
  >
    <label
      class="c1 c2"
      disabled=""
      for="test-radio-input"
    >
      <span
        class="c3"
      >
        Label
      </span>
      <div
        class="c4"
      >
        <input
          aria-describedby="test-radio-error"
          class="c5 c6"
          disabled=""
          id="test-radio-input"
          type="radio"
        />
        <span
          class="c7 c8"
        />
      </div>
    </label>
    <div
      class="c9"
      id="test-radio-error"
    />
  </div>
</div>
`;

exports[`Component: RadioButton -> should render disabled and checked 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
}

.c0:disabled {
  opacity: 0.5;
}

.c1 {
  font-size: var(--etna-font-size,14px);
  line-height: var(--etna-line-height,18px);
  -webkit-letter-spacing: 0.02em;
  -moz-letter-spacing: 0.02em;
  -ms-letter-spacing: 0.02em;
  letter-spacing: 0.02em;
  font-weight: 400;
  display: block;
  color: #646464;
  color: #949494;
  cursor: not-allowed;
}

.c8 {
  margin: 0;
  padding: 0;
  border: 0;
  color: inherit;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  width: 100%;
  border-style: solid;
  border-width: 1px;
  border-radius: 2px;
  background-color: #ffffff;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.5rem;
  height: 1.5rem;
  border-color: #949494;
  border-radius: 50%;
  cursor: pointer;
}

.c8:disabled {
  border-color: #bfbfbf;
  color: #949494;
  background-color: #ebebeb;
}

.c8:focus,
.c8:focus-visible {
  outline-width: 2px;
  outline-style: solid;
  outline-color: #024ddf;
  outline-offset: 2px;
  outline-offset: -2px;
}

.c8::-webkit-input-placeholder {
  color: #646464;
}

.c8::-moz-placeholder {
  color: #646464;
}

.c8:-ms-input-placeholder {
  color: #646464;
}

.c8::placeholder {
  color: #646464;
}

.c5 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c5:disabled ~ .c7 {
  border-color: #bfbfbf;
  color: #949494;
  background-color: #ebebeb;
  cursor: not-allowed;
}

.c5:focus-visible ~ .c7 {
  outline-width: 2px;
  outline-style: solid;
  outline-color: #024ddf;
  outline-offset: 2px;
}

.c5:checked ~ .c7 {
  border-color: #121212;
  border-width: 6px;
  -webkit-transition: border-width 0.15s;
  transition: border-width 0.15s;
}

.c5:hover:not(:checked):not(:disabled) ~ .c7 {
  border-color: #024ddf;
  border-width: 2px;
}

.c5:hover:not(:disabled) ~ .c7 {
  border-color: #0139a7;
}

.c5:disabled:checked ~ .c7 {
  border-color: #bfbfbf;
  border-width: 1px;
  background-color: #bfbfbf;
  box-shadow: inset 0 0 0 5px #ebebeb;
}

.c9 {
  font-size: var(--etna-font-size,14px);
  line-height: var(--etna-line-height,18px);
  -webkit-letter-spacing: 0.02em;
  -moz-letter-spacing: 0.02em;
  -ms-letter-spacing: 0.02em;
  letter-spacing: 0.02em;
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #121212;
}

.c2 {
  font-size: var(--rainier-font-size,16px);
  line-height: var(--rainier-line-height,22px);
  -webkit-letter-spacing: 0.02em;
  -moz-letter-spacing: 0.02em;
  -ms-letter-spacing: 0.02em;
  letter-spacing: 0.02em;
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  margin: -8px;
  color: #646464;
}

.c2 > * {
  padding: 8px;
}

.c3 {
  display: block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-top: auto;
  margin-bottom: auto;
}

.c4 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c6:disabled ~ {
  cursor: not-allowed;
}

@supports not selector(:focus-visible) {
  .c5:focus ~ .c7 {
    outline-width: 2px;
    outline-style: solid;
    outline-color: #024ddf;
    outline-offset: 2px;
  }
}

<div>
  <div
    class="c0"
    id="test-radio"
  >
    <label
      class="c1 c2"
      disabled=""
      for="test-radio-input"
    >
      <span
        class="c3"
      >
        Label
      </span>
      <div
        class="c4"
      >
        <input
          aria-describedby="test-radio-error"
          checked=""
          class="c5 c6"
          disabled=""
          id="test-radio-input"
          type="radio"
        />
        <span
          class="c7 c8"
        />
      </div>
    </label>
    <div
      class="c9"
      id="test-radio-error"
    />
  </div>
</div>
`;
